force-app/main/default/objects/ssot__PromotionLimit__dlm/fields/ssot__CurrentUsageNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__CurrentUsageNumber__c</fullName>
    <label>Current Usage</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CurrentUsageNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>