force-app/main/default/objects/ssot__PromotionLimit__dlm/fields/ssot__LoyaltyProgramCurrency__c.field-meta.xml
<CustomField>
    <fullName>ssot__LoyaltyProgramCurrency__c</fullName>
    <label>Loyalty Program Currency</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LoyaltyProgramCurrency</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>