force-app/main/default/objects/ssot__PromotionLimit__dlm/fields/ssot__PromotionLimitCategory__c.field-meta.xml
<CustomField>
    <fullName>ssot__PromotionLimitCategory__c</fullName>
    <label>Promotion Limit Category</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PromotionLimitCategory</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>