force-app/main/default/objects/ssot__PromotionLimit__dlm/fields/ssot__rel_1729832214776_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1729832214776_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PromotionLimit_LoyaltyProgramCurrenc_rel</label>
    <referenceTo>ssot__LoyaltyProgramCurrency__dlm</referenceTo>
    <relationshipLabel>PromotionLimit_LoyaltyProgramCurrenc_rel</relationshipLabel>
    <relationshipName>rel_1729832214776_end</relationshipName>
    <type>Lookup</type>
</CustomField>